--- a/card/web/css/main.css
+++ b/card/web/css/main.css
@@ -1,15 +1,51 @@
 body{
     margin:0 auto;
-    font-size: x-large;
 }
-.box.banner.banner-content{
-    float: left;
-    list-style: none;
-    width: 500px;
+.box{
+    width: 1000px;
+    height: auto;
 }
-.box.banner.banner-content.banner-item img{
+.banner-content{
+    width: 200rem;
+    height: 13rem;
+    padding: 0;
     list-style: none;
+    display: inline-block;
+
+}
+.banner-item{
     float: left;
-    width: 500px;
-    height: 150px;
+    width: 50rem;
+    height: 13rem;
+}
+.content{
+    width: 100%;
+    height: 13rem;
+    margin: 0 auto;
+    display: inline-block;
+    float: left;
+}
+.left{
+    float: left;
+    width: 40%;
+    height: 10rem;
+    border: aliceblue solid 1rem;
+}
+.right{
+    float: right;
+    width: 40%;
+    height: 10rem;
+    border: aliceblue solid 1rem;
+}
+.content-list{
+    width: 100%;
+    height: auto;
+}
+.list{
+    list-style: none;
+}
+.list-item{
+    margin: 1rem;
+    width: 50rem;
+    height: 13rem;
 }
